test a small addition

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-         <h1>Hello Coursera</h1>
+         <h1>Hello Coursera! We write something else! Real gangsta shit</h1>
     </body>
 </html>
